manifests/manifests/logviewer/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: logviewer
  namespace: plarail2021
spec:
  replicas: 1
  selector:
    matchLabels:
      app: logviewer
  template:
    metadata:
      labels:
        app: logviewer
    spec:
      containers:
      - image: ghcr.io/ueckoken/plarail2022-logviewer:3cc6e2e-1668668145 # {"$imagepolicy": "plarail2021:logviewer"}
        name: logviewer
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        resources:
          limits:
            cpu: 500m
            memory: 128Mi
          requests:
            cpu: 5m
            memory: 64Mi
      serviceAccountName: logviewer
