manifests/manifests/logviewer/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logviewer
  namespace: plarail2021
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
    protocol: TCP
  selector:
    app: logviewer
